objects/TR_Competitors__c.object
<CustomObject>
    <description>1. The business has a need for the new Competitors object to be renamed to avoid confusion:
Competitor should be renamed to &quot;TR Competitors&quot;
2. This object is created as part of Lotus program for DPS-4380</description>
    <fields>
        <fullName>Company_Information__c</fullName>
        <label>Company Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <label>Products</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR_Products_Competing__c</fullName>
        <label>TR Products Competing</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>3E</fullName>
                </value>
                <value>
                    <fullName>3E Budgeting and Forecasting</fullName>
                </value>
                <value>
                    <fullName>3E Data Insights</fullName>
                </value>
                <value>
                    <fullName>3E Image Connect</fullName>
                </value>
                <value>
                    <fullName>3E Templates</fullName>
                </value>
                <value>
                    <fullName>Alteryx</fullName>
                </value>
                <value>
                    <fullName>Ariba</fullName>
                </value>
                <value>
                    <fullName>BD PREMIER</fullName>
                </value>
                <value>
                    <fullName>Bulletin Pro</fullName>
                </value>
                <value>
                    <fullName>Case Logistix</fullName>
                </value>
                <value>
                    <fullName>Case Notebook</fullName>
                </value>
                <value>
                    <fullName>CheckPoint</fullName>
                </value>
                <value>
                    <fullName>CLEAR</fullName>
                </value>
                <value>
                    <fullName>CONCOURSE</fullName>
                </value>
                <value>
                    <fullName>CONTRACT EXPRESS</fullName>
                </value>
                <value>
                    <fullName>Cosine</fullName>
                </value>
                <value>
                    <fullName>Court Express</fullName>
                </value>
                <value>
                    <fullName>Court management solutions</fullName>
                </value>
                <value>
                    <fullName>C-Track</fullName>
                </value>
                <value>
                    <fullName>CV Mail</fullName>
                </value>
                <value>
                    <fullName>Data Privacy Advisor</fullName>
                </value>
                <value>
                    <fullName>Design Gallery</fullName>
                </value>
                <value>
                    <fullName>Doc Review Services</fullName>
                </value>
                <value>
                    <fullName>Doc Studio/Paperless Proforma</fullName>
                </value>
                <value>
                    <fullName>Drafting Assistant</fullName>
                </value>
                <value>
                    <fullName>EBD Contact Manager</fullName>
                </value>
                <value>
                    <fullName>EBD ContactNet</fullName>
                </value>
                <value>
                    <fullName>EBD Experience Manager</fullName>
                </value>
                <value>
                    <fullName>EBD Premier</fullName>
                </value>
                <value>
                    <fullName>EBD Proposal Generator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Web_Address__c</fullName>
        <label>Web Address</label>
        <type>Url</type>
    </fields>
    <label>TR Competitors</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TR Competitors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>